#pragma once

class Input
{
public:
    
};
